Bug 1729071 - AVIF with multiple ColourInformationBox (colr) entries per item are rejected. r=aosmond, a=RyanVM

The logic to allow parsing of the multiple colr boxes is in the parent
update of mp4parse-rust to 72eb355. This change adds a confirmatory test in
gecko and updates telemetry to add new new "both" case for colr tracking.

Differential Revision: https://phabricator.services.mozilla.com/D125744