image/test/gtest/TestDecoders.cpp
@@ -712,6 +712,10 @@ TEST_F(ImageDecoders, AVIFSingleChunkNonzeroReserved) {
   CheckDecoderSingleChunk(NonzeroReservedAVIFTestCase());
 }
 
+TEST_F(ImageDecoders, AVIFSingleChunkMultipleColr) {
+  CheckDecoderSingleChunk(MultipleColrAVIFTestCase());
+}
+
 TEST_F(ImageDecoders, AVIFSingleChunkTransparent10bit420) {
   CheckDecoderSingleChunk(Transparent10bit420AVIFTestCase());
 }
